[package]
name = "KLEB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bit-vec = { git = "https://github.com/TimRouze/bit-vec.git" }
bit-vec = {path = "../bit-vec/"}
ahash = "0.8.6"
#bit-vec = "0.6.3"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
lock_api = "0.4.10"
niffler = "2.5.0"
parking_lot_core = "0.9.8"
num-traits = "0.2.17"
rand = { version = "0.8.5", features = ["small_rng"] }
seq_io = "0.4.0-alpha.0"
rayon = "1.8.0"
flate2 = "1.0.28"

[profile.release]
opt-level = 3
